--- a/problems/19.removeNthNodeFromEndofList.md
+++ b/problems/19.removeNthNodeFromEndofList.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/remove-nth-node-from-end-of-list/description
 
 ## 题目描述
+
 Given a linked list, remove the n-th node from the end of list and return its head.
 
 Example:
@@ -17,23 +19,26 @@ Follow up:
 
 Could you do this in one pass?
 
+## 前置知识
+
+- 链表
+- 双指针
+
 ## 思路
 
-双指针，指针A先移动n次， 指针B再开始移动。当A到达null的时候， 指针b的位置正好是倒数n
+双指针，指针 A 先移动 n 次， 指针 B 再开始移动。当 A 到达 null 的时候， 指针 b 的位置正好是倒数 n
 
-我们可以设想假设设定了双指针p和q的话，当q指向末尾的NULL，p与q之间相隔的元素个数为n时，那么删除掉p的下一个指针就完成了要求。
+我们可以设想假设设定了双指针 p 和 q 的话，当 q 指向末尾的 NULL，p 与 q 之间相隔的元素个数为 n 时，那么删除掉 p 的下一个指针就完成了要求。
 
-设置虚拟节点dummyHead指向head
+设置虚拟节点 dummyHead 指向 head
 
-设定双指针p和q，初始都指向虚拟节点dummyHead
+设定双指针 p 和 q，初始都指向虚拟节点 dummyHead
 
-移动q，直到p与q之间相隔的元素个数为n
+移动 q，直到 p 与 q 之间相隔的元素个数为 n
 
-同时移动p与q，直到q指向的为NULL
+同时移动 p 与 q，直到 q 指向的为 NULL
 
-将p的下一个节点指向下下个节点
-
-
+将 p 的下一个节点指向下下个节点
 
 ![19.removeNthNodeFromEndOfList](../assets/19.removeNthNodeFromEndOfList.gif)
 
@@ -45,7 +50,7 @@ Could you do this in one pass?
 
 2. 使用双指针
 
-3. 使用一个dummyHead简化操作
+3. 使用一个 dummyHead 简化操作
 
 ## 代码
 
@@ -69,24 +74,24 @@ Support: JS, Java
  *
  * Given a linked list, remove the n-th node from the end of list and return
  * its head.
- * 
+ *
  * Example:
- * 
- * 
+ *
+ *
  * Given linked list: 1->2->3->4->5, and n = 2.
- * 
+ *
  * After removing the second node from the end, the linked list becomes
  * 1->2->3->5.
- * 
- * 
+ *
+ *
  * Note:
- * 
+ *
  * Given n will always be valid.
- * 
+ *
  * Follow up:
- * 
+ *
  * Could you do this in one pass?
- * 
+ *
  */
 /**
  * Definition for singly-linked list.
@@ -100,10 +105,10 @@ Support: JS, Java
  * @param {number} n
  * @return {ListNode}
  */
-var removeNthFromEnd = function(head, n) {
+var removeNthFromEnd = function (head, n) {
   let i = -1;
   const noop = {
-    next: null
+    next: null,
   };
 
   const dummyHead = new ListNode(); // 增加一个dummyHead 简化操作
@@ -112,17 +117,15 @@ var removeNthFromEnd = function(head, n) {
   let currentP1 = dummyHead;
   let currentP2 = dummyHead;
 
-  
   while (currentP1) {
-
     if (i === n) {
       currentP2 = currentP2.next;
     }
 
     if (i !== n) {
-        i++;
+      i++;
     }
-    
+
     currentP1 = currentP1.next;
   }
 
@@ -130,7 +133,6 @@ var removeNthFromEnd = function(head, n) {
 
   return dummyHead.next;
 };
-
 ```
 
 - Java Code
