--- a/problems/3.longestSubstringWithoutRepeatingCharacters.md
+++ b/problems/3.longestSubstringWithoutRepeatingCharacters.md
@@ -16,11 +16,14 @@ Given "bbbbb", the answer is "b", with the length of 1.
 Given "pwwkew", the answer is "wke", with the length of 3. Note that the answer must be a substring, "pwke" is a subsequence and not a substring.
 ```
 
+## 前置知识
+
+- 哈希表
+- [滑动窗口](https://github.com/azl397985856/leetcode/blob/master/thinkings/slide-window.md)
+
 ## 思路
 
-用一个 hashmap 来建立字符和其出现位置之间的映射。
-
-维护一个滑动窗口，窗口内的都是没有重复的字符，去尽可能的扩大窗口的大小，窗口不停的向右滑动。
+用一个 hashmap 来建立字符和其出现位置之间的映射。同时维护一个滑动窗口，窗口内的都是没有重复的字符，去尽可能的扩大窗口的大小，窗口不停的向右滑动。
 
 （1）如果当前遍历到的字符从未出现过，那么直接扩大右边界；
 
@@ -42,42 +45,7 @@ Given "pwwkew", the answer is "wke", with the length of 3. Note that the answer 
 
 ## 代码
 
-代码支持：JavaScript，Python3
-
-JavaScript Code:
-
-```js
-/**
- * @param {string} s
- * @return {number}
- */
-var lengthOfLongestSubstring = function(s) {
-  const mapper = {}; // 记录已经出现过的charactor
-  let res = 0;
-  let slidingWindow = [];
-
-  for (let c of s) {
-    if (mapper[c]) {
-      // 已经出现过了
-      // 则删除
-      const delIndex = slidingWindow.findIndex(_c => _c === c);
-
-      for (let i = 0; i < delIndex; i++) {
-        mapper[slidingWindow[i]] = false;
-      }
-
-      slidingWindow = slidingWindow.slice(delIndex + 1).concat(c);
-    } else {
-      // 新字符
-      if (slidingWindow.push(c) > res) {
-        res = slidingWindow.length;
-      }
-    }
-    mapper[c] = true;
-  }
-  return res;
-};
-```
+代码支持：Python3
 
 Python3 Code:
 
@@ -100,3 +68,14 @@ class Solution:
 
         return ans
 ```
+
+**复杂度分析**
+
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(N)$
+
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 30K star 啦。
+
+大家也可以关注我的公众号《力扣加加》获取更多更新鲜的 LeetCode 题解
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
