--- a/problems/4.median-of-two-sorted-array.md
+++ b/problems/4.median-of-two-sorted-array.md
@@ -1,7 +1,9 @@
 ## 题目地址(4. 寻找两个正序数组的中位数)
+
 https://leetcode.com/problems/median-of-two-sorted-arrays/
 
 ## 题目描述
+
 ```
 给定两个大小为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。
 
@@ -26,43 +28,50 @@ nums2 = [3, 4]
 
 ```
 
+## 前置知识
+
+- 中位数
+- 分治法
+- 二分查找
+
 ## 思路
-首先了解一下Median的概念，一个数组中median就是把数组分成左右等分的中位数。
+
+首先了解一下 Median 的概念，一个数组中 median 就是把数组分成左右等分的中位数。
 
 如下图：
 ![image.png](https://pic.leetcode-cn.com/100b34b378d0667969e7a4ca537c74e5103ce302731796740b3fa62b8bc55629-image.png)
 
-
 这道题，很容易想到暴力解法，时间复杂度和空间复杂度都是`O(m+n)`, 不符合题中给出`O(log(m+n))`时间复杂度的要求。
-我们可以从简单的解法入手，试了一下，暴力解法也是可以被Leetcode Accept的. 分析中会给出两种解法，暴力求解和二分解法。
+我们可以从简单的解法入手，试了一下，暴力解法也是可以被 Leetcode Accept 的. 分析中会给出两种解法，暴力求解和二分解法。
 
 #### 解法一 - 暴力 （Brute Force）
-暴力解主要是要merge两个排序的数组`（A，B）`成一个排序的数组。
+
+暴力解主要是要 merge 两个排序的数组`（A，B）`成一个排序的数组。
 
 用两个`pointer（i，j）`，`i` 从数组`A`起始位置开始，即`i=0`开始，`j` 从数组`B`起始位置， 即`j=0`开始.
 一一比较 `A[i] 和 B[j]`,
-1. 如果`A[i] <= B[j]`, 则把`A[i]` 放入新的数组中，i往后移一位，即 `i+1`.
-2. 如果`A[i] > B[j]`, 则把`B[j]` 放入新的数组中，j往后移一位，即 `j+1`.
+
+1. 如果`A[i] <= B[j]`, 则把`A[i]` 放入新的数组中，i 往后移一位，即 `i+1`.
+2. 如果`A[i] > B[j]`, 则把`B[j]` 放入新的数组中，j 往后移一位，即 `j+1`.
 3. 重复步骤#1 和 #2，直到`i`移到`A`最后，或者`j`移到`B`最后。
 4. 如果`j`移动到`B`数组最后，那么直接把剩下的所有`A`依次放入新的数组中.
 5. 如果`i`移动到`A`数组最后，那么直接把剩下的所有`B`依次放入新的数组中.
 
-Merge的过程如下图。
+Merge 的过程如下图。
 ![image.png](https://pic.leetcode-cn.com/966c9a0fea7a5f433b82d660f82c5d8184a2ac73b8362d7be435aa0f63377a4c-image.png)
 
+_时间复杂度： `O(m+n) - m is length of A, n is length of B`_
 
-
-*时间复杂度： `O(m+n) - m is length of A, n is length of B`*
-
-*空间复杂度： `O(m+n)`*
+_空间复杂度： `O(m+n)`_
 
 #### 解法二 - 二分查找 （Binary Search）
+
 由于题中给出的数组都是排好序的，在排好序的数组中查找很容易想到可以用二分查找（Binary Search), 这里对数组长度小的做二分，
-保证数组A 和 数组B 做partition 之后
+保证数组 A 和 数组 B 做 partition 之后
 
 `len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`
 
-对数组A的做partition的位置是区间`[0,m]`
+对数组 A 的做 partition 的位置是区间`[0,m]`
 
 如图：
 ![image.png](https://pic.leetcode-cn.com/816717da264c9e6970bfe0d696d9076febfe04b819f80a224cf2c73845d0f161-image.png)
@@ -70,23 +79,25 @@ Merge的过程如下图。
 下图给出几种不同情况的例子（注意但左边或者右边没有元素的时候，左边用`INF_MIN`，右边用`INF_MAX`表示左右的元素：
 ![image.png](https://pic.leetcode-cn.com/fe03bdcf4db4d74a0bebaa2907df3038c080e5915932fd581d06d4eb930b3035-image.png)
 
-下图给出具体做的partition 解题的例子步骤，
+下图给出具体做的 partition 解题的例子步骤，
 ![image.png](https://pic.leetcode-cn.com/1c2093328c4edf06e416d0f43a94ed42b5a46ecc9f7ed72004b40b9fb47e12a4-image.png)
 
+_时间复杂度： `O(log(min(m, n)) - m is length of A, n is length of B`_
 
-*时间复杂度： `O(log(min(m, n)) - m is length of A, n is length of B`*
-
-*空间复杂度： `O(1)` - 这里没有用额外的空间*
+_空间复杂度： `O(1)` - 这里没有用额外的空间_
 
 ## 关键点分析
-1. 暴力求解，在线性时间内merge两个排好序的数组成一个数组。
+
+1. 暴力求解，在线性时间内 merge 两个排好序的数组成一个数组。
 2. 二分查找，关键点在于
-  - 要partition两个排好序的数组成左右两等份，partition需要满足`len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`
 
-  - 并且partition后 A左边最大(`maxLeftA`), A右边最小（`minRightA`), B左边最大（`maxLeftB`), B右边最小（`minRightB`) 满足
-`(maxLeftA <= minRightB && maxLeftB <= minRightA)`
+- 要 partition 两个排好序的数组成左右两等份，partition 需要满足`len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`
 
-有了这两个条件，那么median就在这四个数中，根据奇数或者是偶数，
+- 并且 partition 后 A 左边最大(`maxLeftA`), A 右边最小（`minRightA`), B 左边最大（`maxLeftB`), B 右边最小（`minRightB`) 满足
+  `(maxLeftA <= minRightB && maxLeftB <= minRightA)`
+
+有了这两个条件，那么 median 就在这四个数中，根据奇数或者是偶数，
+
 ```
 奇数：
 median = max(maxLeftA, maxLeftB)
@@ -96,13 +107,11 @@ median = (max(maxLeftA, maxLeftB) + min(minRightA, minRightB)) / 2
 
 ## 代码
 
-
 代码支持： Java，JS：
-
 
 Java Code：
 
-*解法一 - 暴力解法（Brute force）*
+_解法一 - 暴力解法（Brute force）_
 
 ```java []
 class MedianTwoSortedArrayBruteForce {
@@ -141,43 +150,46 @@ class MedianTwoSortedArrayBruteForce {
     }
 }
 ```
+
 ```javascript []
 /**
  * @param {number[]} nums1
  * @param {number[]} nums2
  * @return {number}
  */
-var findMedianSortedArrays = function(nums1, nums2) {
+var findMedianSortedArrays = function (nums1, nums2) {
   // 归并排序
-  const merged = []
-  let i = 0
-  let j = 0
-  while(i < nums1.length && j < nums2.length) {
+  const merged = [];
+  let i = 0;
+  let j = 0;
+  while (i < nums1.length && j < nums2.length) {
     if (nums1[i] < nums2[j]) {
-      merged.push(nums1[i++])
+      merged.push(nums1[i++]);
     } else {
-      merged.push(nums2[j++])
+      merged.push(nums2[j++]);
     }
   }
-  while(i < nums1.length) {
-    merged.push(nums1[i++])
+  while (i < nums1.length) {
+    merged.push(nums1[i++]);
   }
-  while(j < nums2.length) {
-    merged.push(nums2[j++])
+  while (j < nums2.length) {
+    merged.push(nums2[j++]);
   }
 
-  const { length } = merged
+  const { length } = merged;
   return length % 2 === 1
     ? merged[Math.floor(length / 2)]
-    : (merged[length / 2] + merged[length / 2 - 1]) / 2
+    : (merged[length / 2] + merged[length / 2 - 1]) / 2;
 };
 ```
 
-***复杂度分析***
+**复杂度分析**
+
 - 时间复杂度：$O(max(m, n))$
 - 空间复杂度：$O(m + n)$
 
-*解法二 - 二分查找（Binary Search)*
+_解法二 - 二分查找（Binary Search)_
+
 ```js []
 /**
  * 二分解法
@@ -185,36 +197,37 @@ var findMedianSortedArrays = function(nums1, nums2) {
  * @param {number[]} nums2
  * @return {number}
  */
-var findMedianSortedArrays = function(nums1, nums2) {
+var findMedianSortedArrays = function (nums1, nums2) {
   // make sure to do binary search for shorten array
   if (nums1.length > nums2.length) {
-    [nums1, nums2] = [nums2, nums1]
+    [nums1, nums2] = [nums2, nums1];
   }
-  const m = nums1.length
-  const n = nums2.length
-  let low = 0
-  let high = m
-  while(low <= high) {
-    const i = low + Math.floor((high - low) / 2)
-    const j = Math.floor((m + n + 1) / 2) - i
+  const m = nums1.length;
+  const n = nums2.length;
+  let low = 0;
+  let high = m;
+  while (low <= high) {
+    const i = low + Math.floor((high - low) / 2);
+    const j = Math.floor((m + n + 1) / 2) - i;
 
-    const maxLeftA = i === 0 ? -Infinity : nums1[i-1]
-    const minRightA = i === m ? Infinity : nums1[i]
-    const maxLeftB = j === 0 ? -Infinity : nums2[j-1]
-    const minRightB = j === n ? Infinity : nums2[j]
+    const maxLeftA = i === 0 ? -Infinity : nums1[i - 1];
+    const minRightA = i === m ? Infinity : nums1[i];
+    const maxLeftB = j === 0 ? -Infinity : nums2[j - 1];
+    const minRightB = j === n ? Infinity : nums2[j];
 
     if (maxLeftA <= minRightB && minRightA >= maxLeftB) {
       return (m + n) % 2 === 1
         ? Math.max(maxLeftA, maxLeftB)
-        : (Math.max(maxLeftA, maxLeftB) + Math.min(minRightA, minRightB)) / 2
+        : (Math.max(maxLeftA, maxLeftB) + Math.min(minRightA, minRightB)) / 2;
     } else if (maxLeftA > minRightB) {
-      high = i - 1
+      high = i - 1;
     } else {
-      low = low + 1
+      low = low + 1;
     }
   }
 };
 ```
+
 ```java []
 class MedianSortedTwoArrayBinarySearch {
   public static double findMedianSortedArraysBinarySearch(int[] nums1, int[] nums2) {
@@ -258,13 +271,14 @@ class MedianSortedTwoArrayBinarySearch {
     }
 }
 ```
-***复杂度分析***
+
+**复杂度分析**
+
 - 时间复杂度：$O(log(min(m, n)))$
 - 空间复杂度：$O(log(min(m, n)))$
 
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 30K star 啦。
 
-更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
-
-大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的 LeetCode 题解
 
 ![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
