--- a/problems/5.longest-palindromic-substring.md
+++ b/problems/5.longest-palindromic-substring.md
@@ -4,7 +4,7 @@ https://leetcode-cn.com/problems/longest-palindromic-substring/
 
 ## 题目描述
 
-给定一个字符串 s，找到 s 中最长的回文子串。你可以假设 s 的最大长度为 1000。
+给定一个字符串 s，找到 s 中最长的回文子串。你可以假设  s 的最大长度为 1000。
 
 示例 1：
 
@@ -15,6 +15,10 @@ https://leetcode-cn.com/problems/longest-palindromic-substring/
 
 输入: "cbbd"
 输出: "bb"
+
+## 前置知识
+
+- 回文
 
 ## 思路
 
@@ -38,11 +42,13 @@ if (s[i] === s[j] && dp[i + 1][j - 1]) {
   dp[i][j] = true;
 }
 ```
+
 ![5.longest-palindromic-substring-2](../assets/problems/5.longest-palindromic-substring-2.png)
 
-base case就是一个字符（轴对称点是本身），或者两个字符（轴对称点是介于两者之间的虚拟点）。
+base case 就是一个字符（轴对称点是本身），或者两个字符（轴对称点是介于两者之间的虚拟点）。
 
 ![5.longest-palindromic-substring-3](../assets/problems/5.longest-palindromic-substring-3.png)
+
 ## 关键点
 
 - ”延伸“（extend）
@@ -68,7 +74,7 @@ class Solution:
 
         for i in range(n - 1):
             e1 = extend(i, i, s)
-            e2 = extend(i, i + 1, s) 
+            e2 = extend(i, i + 1, s)
             if max(len(e1), len(e2)) > len(res):
                 res = e1 if len(e1) > len(e2) else e2
         return res
@@ -86,7 +92,7 @@ JavaScript Code：
  * @param {string} s
  * @return {string}
  */
-var longestPalindrome = function(s) {
+var longestPalindrome = function (s) {
   // babad
   // tag : dp
   if (!s || s.length === 0) return "";
@@ -118,14 +124,14 @@ var longestPalindrome = function(s) {
 };
 ```
 
+**_复杂度分析_**
 
-***复杂度分析***
 - 时间复杂度：$O(N^2)$
 - 空间复杂度：$O(N^2)$
 
-更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 30K star 啦。
 
-大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的 LeetCode 题解
 
 ![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
 
