--- a/problems/1.TwoSum.md
+++ b/problems/1.TwoSum.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode-cn.com/problems/two-sum
 
 ## 题目描述
+
 ```
 给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 两个 整数，并返回他们的数组下标。
 
@@ -14,7 +16,13 @@ https://leetcode-cn.com/problems/two-sum
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
 ```
+
+## 前置知识
+
+- 哈希表
+
 ## 思路
+
 最容易想到的就是暴力枚举，我们可以利用两层 for 循环来遍历每个元素，并查找满足条件的目标元素。不过这样时间复杂度为 O(N^2)，空间复杂度为 O(1)，时间复杂度较高，我们要想办法进行优化。我们可以增加一个 Map 记录已经遍历过的数字及其对应的索引值。这样当遍历一个新数字的时候去 Map 里查询，target 与该数的差值是否已经在前面的数字中出现过。如果出现过，那么已经得出答案，就不必再往下执行了。
 
 ## 关键点
@@ -24,7 +32,8 @@ https://leetcode-cn.com/problems/two-sum
 - 以空间换时间，将查找时间从 O(N) 降低到 O(1)
 
 ## 代码
-* 语言支持：JS
+
+- 语言支持：JS
 
 ```js
 /**
@@ -33,18 +42,18 @@ https://leetcode-cn.com/problems/two-sum
  * @return {number[]}
  */
 const twoSum = function (nums, target) {
-    const map = new Map();
-    for (let i = 0; i < nums.length; i++) {
-        const diff = target - nums[i];
-        if (map.has(diff)) {
-            return [map.get(diff), i];
-        }
-        map.set(nums[i], i);
+  const map = new Map();
+  for (let i = 0; i < nums.length; i++) {
+    const diff = target - nums[i];
+    if (map.has(diff)) {
+      return [map.get(diff), i];
     }
-}
+    map.set(nums[i], i);
+  }
+};
 ```
 
-***复杂度分析***
+**复杂度分析**
 
 - 时间复杂度：O(N)
 - 空间复杂度：O(N)
