--- a/problems/17.Letter-Combinations-of-a-Phone-Number.md
+++ b/problems/17.Letter-Combinations-of-a-Phone-Number.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number
 
 ## 题目描述
+
 ```
 给定一个仅包含数字 2-9 的字符串，返回所有它能表示的字母组合。
 
@@ -17,20 +19,29 @@ https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number
 
 ```
 
+## 前置知识
+
+- 回溯
+
 ## 思路
+
 使用回溯法进行求解，回溯是一种通过穷举所有可能情况来找到所有解的算法。如果一个候选解最后被发现并不是可行解，回溯算法会舍弃它，并在前面的一些步骤做出一些修改，并重新尝试找到可行解。究其本质，其实就是枚举。
 
 如果没有更多的数字需要被输入，说明当前的组合已经产生。
 
 如果还有数字需要被输入：
+
 - 遍历下一个数字所对应的所有映射的字母
-- 将当前的字母添加到组合最后，也就是 str + tmp[r] 
+- 将当前的字母添加到组合最后，也就是 str + tmp[r]
 
 ## 关键点
-利用回溯思想解题，在for循环中调用递归。
+
+- 回溯
+- 回溯模板
 
 ## 代码
-* 语言支持：JS
+
+- 语言支持：JS
 
 ```js
 /**
@@ -38,40 +49,39 @@ https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number
  * @return {string[]}
  */
 const letterCombinations = function (digits) {
-    if (!digits) {
-        return [];
-    }
-    const len = digits.length;
-    const map = new Map();
-    map.set('2', 'abc');
-    map.set('3', 'def');
-    map.set('4', 'ghi');
-    map.set('5', 'jkl');
-    map.set('6', 'mno');
-    map.set('7', 'pqrs');
-    map.set('8', 'tuv');
-    map.set('9', 'wxyz');
-    const result = [];
+  if (!digits) {
+    return [];
+  }
+  const len = digits.length;
+  const map = new Map();
+  map.set("2", "abc");
+  map.set("3", "def");
+  map.set("4", "ghi");
+  map.set("5", "jkl");
+  map.set("6", "mno");
+  map.set("7", "pqrs");
+  map.set("8", "tuv");
+  map.set("9", "wxyz");
+  const result = [];
 
-    function generate(i, str) {
-        if (i == len) {
-            result.push(str);
-            return;
-        }
-        const tmp = map.get(digits[i]);
-        for (let r = 0; r < tmp.length; r++) {
-            generate(i + 1, str + tmp[r]);
-        }
+  function generate(i, str) {
+    if (i == len) {
+      result.push(str);
+      return;
     }
-    generate(0, '');
-    return result;
+    const tmp = map.get(digits[i]);
+    for (let r = 0; r < tmp.length; r++) {
+      generate(i + 1, str + tmp[r]);
+    }
+  }
+  generate(0, "");
+  return result;
 };
 ```
 
-***复杂度分析***
+**_复杂度分析_**
 
 N + M 是输入数字的总数
 
-- 时间复杂度：O(3^N * 4^M)
-- 空间复杂度：O(3^N * 4^M)
-
+- 时间复杂度：O(3^N \* 4^M)
+- 空间复杂度：O(3^N \* 4^M)
