--- a/problems/2.addTwoNumbers.md
+++ b/problems/2.addTwoNumbers.md
@@ -1,7 +1,9 @@
 ## 题目地址
+
 https://leetcode.com/problems/add-two-numbers/description/
 
 ## 题目描述
+
 ```
 You are given two non-empty linked lists representing two non-negative integers. The digits are stored in reverse order and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.
 
@@ -14,10 +16,15 @@ Output: 7 -> 0 -> 8
 Explanation: 342 + 465 = 807.
 
 ```
+
+## 前置知识
+
+- 链表
+
 ## 思路
 
-设立一个表示进位的变量carried，建立一个新链表，
-把输入的两个链表从头往后同时处理，每两个相加，将结果加上carried后的值作为一个新节点到新链表后面。
+设立一个表示进位的变量 carried，建立一个新链表，
+把输入的两个链表从头往后同时处理，每两个相加，将结果加上 carried 后的值作为一个新节点到新链表后面。
 
 ![2.addTwoNumbers](../assets/2.addTwoNumbers.gif)
 
@@ -27,12 +34,14 @@ Explanation: 342 + 465 = 807.
 
 1. 链表这种数据结构的特点和使用
 
-2. 用一个carried变量来实现进位的功能，每次相加之后计算carried，并用于下一位的计算
+2. 用一个 carried 变量来实现进位的功能，每次相加之后计算 carried，并用于下一位的计算
 
 ## 代码
-* 语言支持：JS，C++
+
+- 语言支持：JS，C++
 
 JavaScript:
+
 ```js
 /**
  * Definition for singly-linked list.
@@ -46,44 +55,47 @@ JavaScript:
  * @param {ListNode} l2
  * @return {ListNode}
  */
-var addTwoNumbers = function(l1, l2) {
-  if (l1 === null || l2 === null) return null
+var addTwoNumbers = function (l1, l2) {
+  if (l1 === null || l2 === null) return null;
 
   // 使用dummyHead可以简化对链表的处理，dummyHead.next指向新链表
-  let dummyHead = new ListNode(0)
-  let cur1 = l1
-  let cur2 = l2
-  let cur = dummyHead // cur用于计算新链表
-  let carry = 0 // 进位标志
+  let dummyHead = new ListNode(0);
+  let cur1 = l1;
+  let cur2 = l2;
+  let cur = dummyHead; // cur用于计算新链表
+  let carry = 0; // 进位标志
 
   while (cur1 !== null || cur2 !== null) {
-    let val1 = cur1 !== null ? cur1.val : 0
-    let val2 = cur2 !== null ? cur2.val : 0
-    let sum = val1 + val2 + carry
-    let newNode = new ListNode(sum % 10) // sum%10取模结果范围为0~9，即为当前节点的值
-    carry = sum >= 10 ? 1 : 0 // sum>=10，carry=1，表示有进位
-    cur.next = newNode
-    cur = cur.next
+    let val1 = cur1 !== null ? cur1.val : 0;
+    let val2 = cur2 !== null ? cur2.val : 0;
+    let sum = val1 + val2 + carry;
+    let newNode = new ListNode(sum % 10); // sum%10取模结果范围为0~9，即为当前节点的值
+    carry = sum >= 10 ? 1 : 0; // sum>=10，carry=1，表示有进位
+    cur.next = newNode;
+    cur = cur.next;
 
     if (cur1 !== null) {
-      cur1 = cur1.next
+      cur1 = cur1.next;
     }
 
     if (cur2 !== null) {
-      cur2 = cur2.next
+      cur2 = cur2.next;
     }
   }
 
   if (carry > 0) {
     // 如果最后还有进位，新加一个节点
-    cur.next = new ListNode(carry)
+    cur.next = new ListNode(carry);
   }
 
-  return dummyHead.next
+  return dummyHead.next;
 };
 ```
+
 C++
-> C++代码与上面的JavaScript代码略有不同：将carry是否为0的判断放到了while循环中
+
+> C++代码与上面的 JavaScript 代码略有不同：将 carry 是否为 0 的判断放到了 while 循环中
+
 ```c++
 /**
  * Definition for singly-linked list.
@@ -118,18 +130,21 @@ public:
     }
 };
 ```
+
 ## 拓展
 
-通过单链表的定义可以得知，单链表也是递归结构，因此，也可以使用递归的方式来进行reverse操作。
+通过单链表的定义可以得知，单链表也是递归结构，因此，也可以使用递归的方式来进行 reverse 操作。
+
 > 由于单链表是线性的，使用递归方式将导致栈的使用也是线性的，当链表长度达到一定程度时，递归会导致爆栈，因此，现实中并不推荐使用递归方式来操作链表。
 
 ### 描述
 
-1. 将两个链表的第一个节点值相加，结果转为0-10之间的个位数，并设置进位信息
+1. 将两个链表的第一个节点值相加，结果转为 0-10 之间的个位数，并设置进位信息
 2. 将两个链表第一个节点以后的链表做带进位的递归相加
-3. 将第一步得到的头节点的next指向第二步返回的链表
+3. 将第一步得到的头节点的 next 指向第二步返回的链表
 
-###  C++实现
+### C++实现
+
 ```C++
 // 普通递归
 class Solution {
@@ -137,7 +152,7 @@ public:
     ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
         return addTwoNumbers(l1, l2, 0);
     }
-    
+
 private:
     ListNode* addTwoNumbers(ListNode* l1, ListNode* l2, int carry) {
         if (l1 == nullptr && l2 == nullptr && carry == 0) return nullptr;
@@ -157,7 +172,7 @@ public:
         addTwoNumbers(head, nullptr, l1, l2, 0);
         return head;
     }
-    
+
 private:
     void addTwoNumbers(ListNode*& head, ListNode* cur, ListNode* l1, ListNode* l2, int carry) {
         if (l1 == nullptr && l2 == nullptr && carry == 0) return;
