--- a/problems/875.koko-eating-bananas.md
+++ b/problems/875.koko-eating-bananas.md
@@ -1,39 +1,44 @@
-## 题目地址
-https://leetcode.com/problems/koko-eating-bananas/description/
+## 题目地址（875. 爱吃香蕉的珂珂）
+https://leetcode-cn.com/problems/koko-eating-bananas/description/
 
 ## 题目描述
 ```
-Koko loves to eat bananas.  There are N piles of bananas, the i-th pile has piles[i] bananas.  The guards have gone and will come back in H hours.
+珂珂喜欢吃香蕉。这里有 N 堆香蕉，第 i 堆中有 piles[i] 根香蕉。警卫已经离开了，将在 H 小时后回来。
 
-Koko can decide her bananas-per-hour eating speed of K.  Each hour, she chooses some pile of bananas, and eats K bananas from that pile.  If the pile has less than K bananas, she eats all of them instead, and won't eat any more bananas during this hour.
+珂珂可以决定她吃香蕉的速度 K （单位：根/小时）。每个小时，她将会选择一堆香蕉，从中吃掉 K 根。如果这堆香蕉少于 K 根，她将吃掉这堆的所有香蕉，然后这一小时内不会再吃更多的香蕉。  
 
-Koko likes to eat slowly, but still wants to finish eating all the bananas before the guards come back.
+珂珂喜欢慢慢吃，但仍然想在警卫回来前吃掉所有的香蕉。
 
-Return the minimum integer K such that she can eat all the bananas within H hours.
+返回她可以在 H 小时内吃掉所有香蕉的最小速度 K（K 为整数）。
 
- 
+ 
 
-Example 1:
+示例 1：
 
-Input: piles = [3,6,7,11], H = 8
-Output: 4
-Example 2:
+输入: piles = [3,6,7,11], H = 8
+输出: 4
+示例 2：
 
-Input: piles = [30,11,23,4,20], H = 5
-Output: 30
-Example 3:
+输入: piles = [30,11,23,4,20], H = 5
+输出: 30
+示例 3：
 
-Input: piles = [30,11,23,4,20], H = 6
-Output: 23
- 
+输入: piles = [30,11,23,4,20], H = 6
+输出: 23
+ 
 
-Note:
+提示：
 
 1 <= piles.length <= 10^4
 piles.length <= H <= 10^9
 1 <= piles[i] <= 10^9
 
+
 ```
+
+## 前置知识
+
+- 二分查找
 
 ## 思路
 符合直觉的做法是，选择最大的堆的香蕉数，然后试一下能不能行，如果不行则直接返回上次计算的结果，
@@ -52,78 +57,8 @@ piles.length <= H <= 10^9
 ## 代码
 
 ```js
-/*
- * @lc app=leetcode id=875 lang=javascript
- *
- * [875] Koko Eating Bananas
- *
- * https://leetcode.com/problems/koko-eating-bananas/description/
- *
- * algorithms
- * Medium (44.51%)
- * Total Accepted:    11.3K
- * Total Submissions: 24.8K
- * Testcase Example:  '[3,6,7,11]\n8'
- *
- * Koko loves to eat bananas.  There are N piles of bananas, the i-th pile has
- * piles[i] bananas.  The guards have gone and will come back in H hours.
- * 
- * Koko can decide her bananas-per-hour eating speed of K.  Each hour, she
- * chooses some pile of bananas, and eats K bananas from that pile.  If the
- * pile has less than K bananas, she eats all of them instead, and won't eat
- * any more bananas during this hour.
- * 
- * Koko likes to eat slowly, but still wants to finish eating all the bananas
- * before the guards come back.
- * 
- * Return the minimum integer K such that she can eat all the bananas within H
- * hours.
- * 
- * 
- * 
- * 
- * 
- * 
- * 
- * Example 1:
- * 
- * 
- * Input: piles = [3,6,7,11], H = 8
- * Output: 4
- * 
- * 
- * 
- * Example 2:
- * 
- * 
- * Input: piles = [30,11,23,4,20], H = 5
- * Output: 30
- * 
- * 
- * 
- * Example 3:
- * 
- * 
- * Input: piles = [30,11,23,4,20], H = 6
- * Output: 23
- * 
- * 
- * 
- * 
- * Note:
- * 
- * 
- * 1 <= piles.length <= 10^4
- * piles.length <= H <= 10^9
- * 1 <= piles[i] <= 10^9
- * 
- * 
- * 
- * 
- * 
- */
 
- function canEatAllBananas(piles, H, mid) {
+function canEatAllBananas(piles, H, mid) {
      let h = 0;
      for(let pile of piles) {
         h += Math.ceil(pile / mid);
