--- a/problems/167.two-sum-ii-input-array-is-sorted.md
+++ b/problems/167.two-sum-ii-input-array-is-sorted.md
@@ -23,6 +23,10 @@ Explanation: The sum of 2 and 7 is 9. Therefore index1 = 1, index2 = 2.
 
 ```
 
+## 前置知识
+
+- 双指针
+
 ## 思路
 
 由于题目没有对空间复杂度有求，用一个hashmap  存储已经访问过的数字即可。
@@ -35,7 +39,7 @@ Explanation: The sum of 2 and 7 is 9. Therefore index1 = 1, index2 = 2.
 
 ## 关键点解析
 
-无
+- 由于是有序的，因此双指针更好
 
 
 ## 代码
