--- a/problems/42.trapping-rain-water.md
+++ b/problems/42.trapping-rain-water.md
@@ -109,3 +109,7 @@ class Solution:
             ans += max(0, min(l[i + 1], r[i]) - heights[i])
         return ans     
 ```
+
+## 相关题目
+
+- [84.largest-rectangle-in-histogram](https://github.com/azl397985856/leetcode/blob/master/problems/84.largest-rectangle-in-histogram.md)
