--- a/problems/84.largest-rectangle-in-histogram.md
+++ b/problems/84.largest-rectangle-in-histogram.md
@@ -174,7 +174,10 @@ class Solution:
             st.append(i)
         return ans
  ```
+ 
+## 相关题目
 
+- [42.trapping-rain-water](https://github.com/azl397985856/leetcode/blob/master/problems/42.trapping-rain-water.md)
 
 
 
