feat: 增加前置知识标签 (#384)
为20-40题增加了前置知识标签

--- a/problems/20.validParentheses.md
+++ b/problems/20.validParentheses.md
@@ -34,6 +34,10 @@ Input: "{[]}"
 Output: true
 ```
 
+## 前置知识
+
+- 栈
+
 ## 思路
 
 关于这道题的思路，邓俊辉讲的非常好，没有看过的同学可以看一下, [视频地址](http://www.xuetangx.com/courses/course-v1:TsinghuaX+30240184+sp/courseware/ad1a23c053df4501a3facd66ef6ccfa9/8d6f450e7f7a445098ae1d507fda80f6/)。
