--- a/problems/23.merge-k-sorted-lists.md
+++ b/problems/23.merge-k-sorted-lists.md
@@ -16,6 +16,11 @@ https://leetcode-cn.com/problems/merge-k-sorted-lists/description/
 ]
 输出: 1->1->2->3->4->4->5->6
 
+## 前置知识
+
+- 链表
+- 归并排序
+
 ## 思路
 
 这道题目是合并 k 个已排序的链表，号称 leetcode 目前`最难`的链表题。 和之前我们解决的[88.merge-sorted-array](./88.merge-sorted-array.md)很像。
