--- a/problems/24.swapNodesInPairs.md
+++ b/problems/24.swapNodesInPairs.md
@@ -11,6 +11,11 @@ You may not modify the values in the list's nodes, only nodes itself may be chan
 Example:
 
 Given 1->2->3->4, you should return the list as 2->1->4->3.
+
+## 前置知识
+
+- 链表
+
 ## 思路
 
 设置一个dummy 节点简化操作,dummy next 指向head。  
