--- a/problems/25.reverse-nodes-in-k-groups-cn.md
+++ b/problems/25.reverse-nodes-in-k-groups-cn.md
@@ -22,6 +22,10 @@ You may not alter the values in the list's nodes, only nodes itself may be chang
 
 ```
 
+## 前置知识
+
+- 链表
+
 ## 思路
 题意是以 `k` 个nodes为一组进行翻转，返回翻转后的`linked list`.
 
