--- a/problems/32.longest-valid-parentheses.md
+++ b/problems/32.longest-valid-parentheses.md
@@ -18,6 +18,10 @@ Output: 4
 Explanation: The longest valid parentheses substring is "()()"
 ```
 
+## 前置知识
+
+- 动态规划
+
 ## 思路(动态规划)
 
 所有的动态规划问题, 首先需要解决的就是如何寻找合适的子问题.
