--- a/problems/29.divide-two-integers.md
+++ b/problems/29.divide-two-integers.md
@@ -25,6 +25,10 @@ Assume we are dealing with an environment which could only store integers within
 
 ```
 
+## 前置知识
+
+- 二分法
+
 ## 思路
 
 符合直觉的做法是，减数一次一次减去被减数，不断更新差，直到差小于0，我们减了多少次，结果就是多少。
