--- a/problems/31.next-permutation.md
+++ b/problems/31.next-permutation.md
@@ -19,6 +19,10 @@ Here are some examples. Inputs are in the left-hand column and its corresponding
 
 ```
 
+## 前置知识
+
+- 回溯法
+
 ## 思路
 
 符合直觉的方法是我们按顺序求出所有的排列，如果当前排列等于 nums，那么我直接取下一个
